--- a/search.html
+++ b/search.html
@@ -4,17 +4,17 @@
         <link rel="stylesheet" href="styles.css" type="text/css">
     </head>
     <body>
-        <div class="container">
-            <div class="green-square">1</div>
-            <div class="green-square">2</div>
-            <div class="green-square">3</div>
-            <div class="green-square">4</div>
-            <div class="green-square">5</div>
-            <div class="green-square">6</div>
-            <div class="green-square">7</div>
-            <div class="green-square">8</div>
-            <div class="green-square">9</div>
-
+        <div class="top">
+            <div class="green-square">Image Search</div>
+            <div class="green-square">Advanced Search</div>
+        </div>
+        <div class="middle">
+            <div class="green-square">
+                <form action="https://www.google.com/search">
+                    <input id="search-bar" type="text" name="q">
+                    <input type="submit" value="Google search">
+                </form>
+            </div>
         </div>
     </body>
 </html>
