--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css" type="text/css">
+        <title>Search</title>
     </head>
     <body>
         <div class="top">
