--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     </head>
     <body>
         <div class="top">
-            <div class="green-square">Image Search</div>
-            <div class="green-square">Advanced Search</div>
+            <div class="gray-square">
+                <a href="./image.html">Image Search</a>
+            </div>
+            <div class="gray-square">
+                <a href="./advanced.html">Advanced Search</a>
+            </div>
+        </div>
+        <div class="foogle">
+            <img src="foogle.jpg" alt="foogle">
         </div>
         <div class="middle">
             <div class="green-square">
                 <form action="https://www.google.com/search">
-                    <input id="search-bar" type="text" name="q">
-                    <input type="submit" value="Google search">
+                    <input class="search-bar" type="text" name="q">
+                    <div class="buttons">
+                        <input class="search-btn" type="submit" value="Google Search">
+                    </div>    
                 </form>
             </div>
         </div>
